<resources>
    <string name="app_name">ToDo List</string>
    <string name="action_settings">Settings</string>
    <string name="create_note">Create ToDo note</string>
    <string name="delete_note">Delete note?</string>
    <string name="delete_this_note">Delete this note</string>
    <string name="sort_deadline">Sort by deadline</string>
    <string name="delete_all_notes">Delete all?</string>
    <string name="all_deleted">All notes deleted</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="priority">Priority</string>
    <string name="set_deadline">Set deadline</string>
    <string name="title_activity_editor">Editor</string>
    <string name="sort_by_created">Sort by DateTime created</string>
    <string name="note_updated">Updated</string>
    <string name="not_changed">nothing changed</string>
    <string name="not_created">nothing created</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note DELETED!</string>
    <string name="set_priority">Set priority</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="sorted_item">sorted</string>
    <string name="image_doc_icon">image doc icon</string>
    <string name="hint_for_text">type your text here</string>
</resources>

