<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imageDocIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_file_document_box_grey600_48dp"
        android:contentDescription="@string/image_doc_icon"/>

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/imageDocIcon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toEndOf="@+id/imageDocIcon"
        android:layout_toRightOf="@+id/imageDocIcon"
        android:singleLine="true"
        android:text="@string/dummy_text"
        android:textColor="@color/list_item_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvNote"
        android:layout_marginLeft="2dp"
        android:layout_toEndOf="@+id/imageDocIcon"
        android:layout_toRightOf="@+id/imageDocIcon"
        android:singleLine="true"
        android:text="@string/sorted_item"
        android:textColor="@color/list_item_sorted"
        android:textSize="12sp" />

</RelativeLayout>