<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sasha.todolist.EditorActivity">




    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:hint="@string/hint_for_text"
            android:inputType="textMultiLine|textCapSentences"/>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/setPriority"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"

            android:layout_marginRight="2dp"
            android:hint="@string/set_priority"
            android:gravity="center"
            android:textColorHint="@color/accent"
            android:textColor="@color/white"
            android:background="@color/list_item_sorted"
            android:inputType="date"
            android:ems="15"/>

        <EditText
            android:id="@+id/setDeadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"

            android:layout_marginLeft="2dp"
            android:hint="@string/set_deadline"
            android:gravity="center"
            android:textAlignment="center"
            android:textColorHint="@color/accent"
            android:textColor="@color/white"
            android:background="@color/list_item_sorted"
            android:inputType="date"
            android:ems="15"/>

    </LinearLayout>

</RelativeLayout>
